# OOP

./: Task1.cpp  Task2(1).cpp
Task3/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp
Task4/: 1.cpp  2.cpp  3.cpp
Task5/: 1.cpp  2.cpp  3.cpp  4.cpp
Task6/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp
Task7/: 2.cpp
seminar01_thread_homework/Task1/: main.cpp
seminar01_thread_homework/Task2/: main.cpp
seminar02_mutex_homework/Task1/: main.cpp
seminar03_async_homework/Task1/: main.cpp
seminar04_atomic_homework/Task1/: main.cpp
seminar10_cmake_basics_homework/Task1/0simple_project/: CMakeLists.txt
seminar10_cmake_basics_homework/Task2/1creating_library/: CMakeLists.txt
seminar10_cmake_basics_homework/Task3/2linking_library/: CMakeLists.txt
seminar10_cmake_basics_homework/Task4/3list/: animals.cmake  data.txt
seminar10_cmake_basics_homework/Task5/4choosing_source/: CMakeLists.txt
seminar10_cmake_basics_homework/Task6/: CMakeLists.txt
seminar10_cmake_basics_homework/Task7/: CMakeLists.txt  answer.txt
seminar10_cmake_basics_homework/Task8/: CMakeLists.txt
seminar11_cmake2_homework/Task1/: CMakeLists.txt
seminar11_cmake2_homework/Task2/: README.md
seminar20_git_homework/: README.md
