cmake_minimum_required(VERSION 3.22)
project(main)
set(PROPERTY_LIST NAME TYPE SOURCES SOURCE_DIR BINARY_DIR INCLUDE_DIRECTORIES COMPILE_DEFINITIONS COMPILE_OPTIONS LINK_LIBRARIES LINK_OPTIONS)
function(print_target_properties target)
    if(NOT TARGET ${target})
      message(STATUS "There is no target named '${target}'")
      return()
    endif()
    foreach(property ${PROPERTY_LIST})
        get_target_property(value ${target} ${property})
        message("${target} ${property} = ${value}")
    endforeach()
endfunction()
add_executable(main main.cpp)
print_target_properties(main)