cmake_minimum_required(VERSION 3.20)
project(AnimalsProject)
include_directories(src)
if(NOT DEFINED ANIMAL_TYPE)
    message(FATAL_ERROR "Variable is not defined")
    else()
    if("${ANIMAL_TYPE}" STREQUAL Cat OR "${ANIMAL_TYPE}" STREQUAL Mouse OR "${ANIMAL_TYPE}"  STREQUAL Dog)
        string(TOLOWER ${ANIMAL_TYPE} file)
        add_executable(main src/${file}.cpp)    
    else()
        message(FATAL_ERROR "Variable doesn't match any file")   
    endif()
endif()

